# ansible-playbook-windows-sample

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
inventories/: hosts.yml
inventories/group_vars/all/: vars.yml
inventories/host_vars/: sample01.yml
