[tool.poetry]
name = "ansible-playbook-windows-sample"
version = "0.1.0"
description = ""
authors = ["Lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^6.2.0"
pywinrm = "^0.4.3"

[tool.poetry.dev-dependencies]
yamllint = "^1.27.1"
ansible-lint = "^6.4.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
